<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name"><font color="#f99f42">NuT</font><font color="#d57e3a">racker!</font></string>
    <string name="welcome">Welcome to</string>
    <string name="create_acc">Create An Account</string>
    <string name="create_profile">Create Profile</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_acc"><font color="#f99f42">No Account?</font><font color="#ffb814"> Register</font></string>
    <string name="sign_in"><font color="#f99f42">Already a Member? </font><font color="#ffb814">Sign In</font></string>
    <!-- Strings related to login -->
    <string name="title_activity_create_profile">CreateProfileActivity</string>
    <string name="prompt_email">Email/Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="food"></string>
    <string name="title_activity_history">HistoryActivity</string>

    <!-- Strings used for User Information -->
    <string name="username"></string>
    <string name="userGender"></string>
    <string name="userHeight"></string>
    <string name="userAge"></string>
    <string name="userWeight"></string>
    <string name="userActivityLVL"></string>
    <string name="title_activity_food_info">FoodInfo</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_camera">CameraActivity</string>

</resources>